# sym-rest-rc

./: .gitignore  CLAUDE.md  COMMANDS.md  Cargo.toml  Readme.md  claude.prompt.md  iris2rows.csv
data/: Iris_rtlm.csv
etc/: rc.conf
examples/: ex-001-simple.sh
script/: ex-001-simple.sh
src/: auth.rs  cli.rs  common.rs  config.rs  main.rs
src/commands/: build_rest.rs  create_project.rs  job_rest.rs  learn_rest.rs  learn_ws.rs  mod.rs
src/commands/models/: autoselect.rs  delete.rs  info.rs  mod.rs  predict_rest.rs  predict_ws.rs
src/commands/projects/: delete.rs  info.rs  mod.rs
