[package]
name = "sym-rest-rc"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.23"
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
md5 = "0.7"
chrono = "0.4"
futures-util = "0.3"
